# vitrine_ai_chat_model

./: README.md  pyproject.toml
env_files/: .env.example
src/: app.py
src/config/: settings.py
